--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rajubhai</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="./All pic/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="All pic/logo.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
